--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@
 # incubator: The Carpentries Incubator
 # Note that you can also use a custom carpentry type. For more info,
 # see the documentation: https://carpentries.github.io/sandpaper-docs/editing.html
-carpentry: 'incubator'
+carpentry: ''
 
 # Custom carpentry description
 # This will be used as the alt text for the logo
@@ -20,14 +20,14 @@ carpentry: 'incubator'
 title: 'Lesson Title'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: '2026-01-02'
+created: ''
 
 # Comma-separated list of keywords for the lesson
 keywords: 'software, data, lesson, The Carpentries'
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'pre-alpha'
+life_cycle: ''
 
 # License of the lesson materials (recommended CC-BY 4.0)
 license: 'CC-BY 4.0'
@@ -66,6 +66,7 @@ contact: 'team@carpentries.org'
 # Order of episodes in your lesson
 episodes: 
 - introduction.Rmd
+- next-episode.Rmd
 
 # Information for Learners
 learners: 
